--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,14 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
         </plugin>
+	 <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>2.6</version>
+            <configuration>
+                <failOnMissingWebXml>false</failOnMissingWebXml>
+            </configuration>
+        </plugin>     
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
           <version>3.2.2</version>
