--- a/pom.xml
+++ b/pom.xml
@@ -94,11 +94,11 @@
                 <failOnMissingWebXml>false</failOnMissingWebXml>
             </configuration>
         </plugin>     
-        <plugin>
-          <artifactId>maven-war-plugin</artifactId>
+        /* <plugin>
+         <artifactId>maven-war-plugin</artifactId> 
           <version>3.2.2</version>
-        </plugin>
-        <plugin>
+        </plugin> 
+        <plugin> */
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
         </plugin>
