--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
                 <failOnMissingWebXml>false</failOnMissingWebXml>
             </configuration>
         </plugin>     
-       
+          <plugin>      
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
         </plugin>
